Trying synchronizing gui